packages/webpack/css-extract-webpack-plugin/test/diagnostic/error/sass/expected/rspack.txt
ERROR in × Module build failed:
╰─▶   × Expected identifier.
╷
1  ..foo {}
^
╵
<ROOT>/packages/webpack/css-extract-webpack-plugin/test/diagnostic/error/sass/index.scss <LINE:COLUMN>  root stylesheet

ERROR in ./error/sass/index.scss
× Module build failed:
╰─▶   × TypeError: Cannot read properties of undefined (reading '__esModule')
at isCJSExports (file://<ROOT>/packages/webpack/css-extract-webpack-plugin/src/loader.ts:<LINE:COLUMN>)
at isNamedExports (file://<ROOT>/packages/webpack/css-extract-webpack-plugin/src/loader.ts:<LINE:COLUMN>)
at Object.load (file://<ROOT>/packages/webpack/css-extract-webpack-plugin/src/loader.ts:<LINE:COLUMN>)
at Object.pitch (file://<ROOT>/packages/webpack/css-extract-webpack-plugin/src/rspack-loader.ts:<LINE:COLUMN>)
